# esp32p4-uvc-video

./: .gitignore  CMakeLists.txt  README.md  apply_tinyusb_patches.sh  sdkconfig.defaults  sdkconfig.defaults.esp32p4
components/usb_device_uvc/: CMakeLists.txt  Kconfig  idf_component.yml  usb_device_uvc.c
components/usb_device_uvc/include/: usb_device_uvc.h
components/usb_device_uvc/tusb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h  uvc_frame_config.h
docs/: cpu-ram-dma-analysis.md  h264-encoding-primer.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_olimex_p4.h  camera_pipeline.c  camera_pipeline.h  encoder_manager.c  encoder_manager.h  eth_init.c  eth_init.h  idf_component.yml  perf_monitor.c  perf_monitor.h  rtp_sender.c  rtp_sender.h  rtsp_server.c  rtsp_server.h  uvc_controls.c  uvc_controls.h  uvc_descriptors.h  uvc_streaming.c  uvc_streaming.h
tools/: uvc_control_gui.py
