idf_component_register(
    SRCS
        "app_main.c"
        "camera_pipeline.c"
        "encoder_manager.c"
        "uvc_streaming.c"
        "uvc_controls.c"
        "perf_monitor.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        esp_timer
        esp_hw_support
        esp_cam_sensor
        esp_video
        espressif__tinyusb
        usb_device_uvc
)
